accidentally removed info for current song, added it back

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -160,6 +160,9 @@
                   'Authorization': 'Bearer ' + access_token
                 },
                 success: function(response) {
+                  //send Spotify current song info to HTML 
+                  userCurrentSongPlaceholder.innerHTML = userCurrentSongTemplate(response);
+
                   //get the song name and remove stuf like: "(feat. person)" or "- Acoustic Session" since they break Genius search
                   var song = response.item.name;
                   song = song.split('(')[0];
