finished figuring out how to get everything to run from node.js

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -166,6 +166,7 @@
 
                   $('#login').hide();
                   $('#loggedin').show();
+                  console.log('logged in');
                 }
             });
 
